--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri=${MONGO_DRIVER:mongodb}://${MONGO_HOST_NAME:localhost:27017}/sharedalbums?retryWrites=true&w=majority
+spring.data.mongodb.auto-index-creation=true
+server.port=${APP_PORT:8080}
